--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "cpp-ml-interface"]
-	path = cpp-ml-interface
-	url = git@git-ce.rwth-aachen.de:hpc-research/hpc-ai/cpp-ml-interface.git
+[submodule "CPP-ML-Interface"]
+	path = CPP-ML-Interface
+	url = git@github.com:RWTH-HPC/CPP-ML-Interface.git
